@@ -1,6 +1,6 @@
 {% extends "admin/base_site.html" %}
 
-{% load markup i18n %}
+{% load i18n %}
 {% load adminmedia admin_list i18n %}
 
 {% block extrastyle %}
